[package]
name = "tokio-futures-respawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27" }

[dev-dependencies]
tokio = { version = "1.27", features = ["full"] }
mockall = "0.11"
