[package]
name = "tokio-futures-respawn"
version = "0.1.3"
edition = "2021"
description = "Utility function to respawn failed long running tasks"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", features = ["rt", "time"] }
tracing = { version = "0.1", optional = true }


[dev-dependencies]
tracing = "0.1"
tokio = { version = "1.27", features = ["full"] }

[features]
tracing = ["dep:tracing"]
